#29 CDN Implementation and server s3 from it

--- a/public/error.html
+++ b/public/error.html
@@ -1,1 +1,9 @@
-ERROR !!! These are not the droids you are looking for
+<html>
+<body>
+
+ <h1>ERROR !!! These are not the droids you are looking for</h1>   
+</body>
+
+
+</html>
+
