#35 added for_each for assets upload

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,14 @@
 <html>
 <body>
 
- <h1>I am a nice Person!</h1>   
+ <h1>I am a nice Person!</h1>
+ <img src="assets/mecartoon.jpg">  
+ <img src="assets/cake05.jpg">
+ <img src="assets/buffalumps_bioluminescent_monkey__wearing_black_and_Fire_in_cyb_61a87a9d-2710-4320-9415-db3cae906ee3.png">
+ <img src="assets/Emp_Realistic_4D_render_Marvel_Cosbaby_movie_Avengers_Age_of_Ul_c615e230-b4c6-4ec1-b1be-8f4e45dd4191.png">
+ <img src="assets/Emp_Realistic_4D_render_Marvel_Cosbaby_movie_Marvel_Comics_Cosb_2ba639ea-3472-433a-b013-41aefadcb192.png">
+ <img src="assets/Emp_Realistic_4D_render_Marvel_Cosbaby_movie_Marvel_Cosbaby_Wad_69637219-0846-4ef9-adb2-5617021b0899.png">
+ <img src="assets/Emp_Realistic_4D_render_Marvel_Cosbaby_movie_Marvel_Cosbaby_Yon_ad1c9e4d-ec43-4eda-9811-37165a069ddb.png"> 
 </body>
 
 
